--- a/charts/ntp-exporter/templates/daemonset.yaml
+++ b/charts/ntp-exporter/templates/daemonset.yaml
@@ -55,3 +55,13 @@ spec:
         securityContext:
           {{- toYaml .Values.securityContext | nindent 10 }}
         {{- end }}
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 9559
+          periodSeconds: 5
+        readinessProbe:
+          httpGet:
+            path: /metrics
+            port: 9559
+          periodSeconds: 5
