--- a/charts/ntp-exporter/values.yaml
+++ b/charts/ntp-exporter/values.yaml
@@ -1,7 +1,7 @@
 image:
   repository: sapcc/ntp-exporter
   tag: v2.1.0
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 
 resources:
   requests:
