--- a/charts/ntp-exporter/templates/daemonset.yaml
+++ b/charts/ntp-exporter/templates/daemonset.yaml
@@ -8,7 +8,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
     app.kubernetes.io/component: metrics
-    app.kubernetes.io/name: "{{ .Release.Name }}"
+    app.kubernetes.io/name: ntp-exporter
     app.kubernetes.io/version: {{ .Chart.Version }}
 spec:
   selector:
