--- a/charts/ntp-exporter/templates/daemonset.yaml
+++ b/charts/ntp-exporter/templates/daemonset.yaml
@@ -28,6 +28,9 @@ spec:
       - key: node-role.kubernetes.io/master
         operator: Exists
         effect: NoSchedule
+      {{- if .Values.priorityClassName }}
+      priorityClassName:  {{ .Values.priorityClassName }}
+      {{- end }}
       containers:
       - name: ntp-exporter
         image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
