--- a/.github/workflows/helm.yml
+++ b/.github/workflows/helm.yml
@@ -1,9 +1,8 @@
-name: Release Charts
+name: Release HELM Charts
 
 on:
   push:
-    branches:
-      - main
+    tags: [ 'v*.*.*' ]
 
 jobs:
   release:
@@ -27,6 +26,14 @@ jobs:
         uses: azure/setup-helm@v3
         with:
           version: v3.10.0
+
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
+      - name: Patch version into chart
+        uses: mikefarah/yq@master
+        with:
+          cmd: yq -i '.version = "${{ env.RELEASE_VERSION }}"' charts/ntp-exporter/Chart.yaml
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.4.1
