--- a/charts/ntp-exporter/templates/daemonset.yaml
+++ b/charts/ntp-exporter/templates/daemonset.yaml
@@ -22,12 +22,8 @@ spec:
         role: metrics-exporter
     spec:
       tolerations:
-      - key: node-role.kubernetes.io/control-plane
+      - effect: NoSchedule
         operator: Exists
-        effect: NoSchedule
-      - key: node-role.kubernetes.io/master
-        operator: Exists
-        effect: NoSchedule
       {{- if .Values.priorityClassName }}
       priorityClassName:  {{ .Values.priorityClassName }}
       {{- end }}
